# Ramdan-coding-nights

./: README.md
advance-agent/: main.py  pyproject.toml
auth-chatbot/: chainlit.yaml  main.py  pyproject.toml  requirements.txt
deployment/: fastapi.py  main.py  vercel.json
joke-generator/: main.py  pyproject.toml
money-making-machine/: main.py
money-making-machine/.streamlit/: secrets.toml
mood-tracker/: main.py  mood_log.csv
password-generator/: main.py
qa-chatbot/: .env  main.py  requirements.txt  terminal.py
quiz-app/: main.py
simple-agents/: .env  main.py  pyproject.toml
simple-api/: main.py
simple-calculator/: main.py
simple-calculator/.streamlit/: config.toml
simple-chatbot/: main.py  pyproject.toml
time-zone/: main.py  pyproject.toml
unit-converter/: main.py
